--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,7 +221,6 @@ allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
-allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
@@ -656,6 +655,7 @@ allow 193.218.118.188;
 allow 193.218.118.56;
 allow 193.218.118.72;
 allow 193.218.118.89;
+allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
@@ -935,6 +935,7 @@ allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.39;
 allow 205.185.113.8;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -1278,7 +1279,6 @@ allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
 allow 2a02:c206:2241:2588::1;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1638,6 +1638,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
+allow 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1704,6 +1705,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1713,7 +1715,6 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
