--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -221,7 +221,6 @@ set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
-set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
@@ -656,6 +655,7 @@ set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.56;
 set_real_ip_from 193.218.118.72;
 set_real_ip_from 193.218.118.89;
+set_real_ip_from 193.218.118.94;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.161;
@@ -935,6 +935,7 @@ set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.39;
 set_real_ip_from 205.185.113.8;
+set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.118.31;
@@ -1278,7 +1279,6 @@ set_real_ip_from 2a02:c206:2240:5054::1;
 set_real_ip_from 2a02:c206:2240:5264::1;
 set_real_ip_from 2a02:c206:2240:8448::1;
 set_real_ip_from 2a02:c206:2241:2588::1;
-set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1638,6 +1638,7 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:8605:d341:b954:fc51;
+set_real_ip_from 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 set_real_ip_from 2a0f:e586:f:f:9405:a52b:796f:aff2;
 set_real_ip_from 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -1704,6 +1705,7 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1713,7 +1715,6 @@ set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
