--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -302,6 +302,7 @@ allow 185.150.28.13;
 allow 185.153.198.104;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.158.249.155;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -1327,7 +1328,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1376,6 +1376,8 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0b:64c0:f802:4c::a;
+allow 2a0b:7140:1:1:5054:ff:fe12:2305;
+allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1719,6 +1721,7 @@ allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
 allow 40.160.3.1;
+allow 45.11.183.87;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
@@ -1836,7 +1839,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1874,6 +1876,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
 allow 62.133.45.2;
+allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 64.190.76.2;
@@ -1894,6 +1897,7 @@ allow 74.82.47.194;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
+allow 78.159.131.96;
 allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
