--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -409,7 +409,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -458,6 +457,8 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0b:64c0:f802:4c::a;
+allow 2a0b:7140:1:1:5054:ff:fe12:2305;
+allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
