--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -302,6 +302,7 @@ deny 185.150.28.13;
 deny 185.153.198.104;
 deny 185.154.110.142;
 deny 185.154.110.17;
+deny 185.158.249.155;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -1327,7 +1328,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1376,6 +1376,8 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0b:64c0:f802:4c::a;
+deny 2a0b:7140:1:1:5054:ff:fe12:2305;
+deny 2a0b:7140:6:1:5054:ff:fed8:5956;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1719,6 +1721,7 @@ deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
 deny 40.160.3.1;
+deny 45.11.183.87;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
@@ -1836,7 +1839,6 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1874,6 +1876,7 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 5.79.66.19;
 deny 62.133.45.2;
+deny 62.133.63.146;
 deny 62.171.137.169;
 deny 62.182.84.146;
 deny 64.190.76.2;
@@ -1894,6 +1897,7 @@ deny 74.82.47.194;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
+deny 78.159.131.96;
 deny 79.127.129.160;
 deny 80.241.60.207;
 deny 80.67.167.81;
