--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -302,6 +302,7 @@ set_real_ip_from 185.150.28.13;
 set_real_ip_from 185.153.198.104;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
+set_real_ip_from 185.158.249.155;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -1327,7 +1328,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1376,6 +1376,8 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0b:64c0:f802:4c::a;
+set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
+set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1719,6 +1721,7 @@ set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.160.3.1;
+set_real_ip_from 45.11.183.87;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1836,7 +1839,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1874,6 +1876,7 @@ set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
+set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
@@ -1894,6 +1897,7 @@ set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 78.159.131.96;
 set_real_ip_from 79.127.129.160;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
