--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -704,6 +704,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
+deny 2a0f:e586:f:f:8ac2:45a2:10cb:495f;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
@@ -732,8 +733,6 @@ deny 2a12:a800:2:1:45:138:16:107;
 deny 2a12:a800:2:1:45:138:16:113;
 deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:a800:2:1:45:138:16:222;
-deny 2a12:a800:2:1:45:138:16:230;
-deny 2a12:a800:2:1:45:138:16:231;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:76;
