--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -801,6 +801,10 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::100;
+allow 2001:67c:e28:1::101;
+allow 2001:67c:e28:1::102;
+allow 2001:67c:e28:1::103;
 allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
@@ -965,7 +969,7 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.184.48.13;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1026,12 +1030,12 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1302,7 +1306,6 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
-allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
@@ -1729,6 +1732,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.152.10.22;
 allow 45.157.11.6;
 allow 45.159.250.144;
 allow 45.61.185.172;
@@ -1822,7 +1826,6 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
-allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
@@ -1842,6 +1845,10 @@ allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
+allow 64.190.76.10;
+allow 64.190.76.11;
+allow 64.190.76.12;
+allow 64.190.76.13;
 allow 64.190.76.2;
 allow 64.190.76.3;
 allow 64.190.76.4;
