--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -801,6 +801,10 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
+deny 2001:67c:e28:1::100;
+deny 2001:67c:e28:1::101;
+deny 2001:67c:e28:1::102;
+deny 2001:67c:e28:1::103;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
@@ -965,7 +969,7 @@ deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
-deny 23.184.48.13;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -1026,12 +1030,12 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1302,7 +1306,6 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
-deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
@@ -1729,6 +1732,7 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.148.10.111;
 deny 45.148.10.169;
+deny 45.152.10.22;
 deny 45.157.11.6;
 deny 45.159.250.144;
 deny 45.61.185.172;
@@ -1822,7 +1826,6 @@ deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
 deny 5.255.98.23;
-deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
@@ -1842,6 +1845,10 @@ deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
 deny 62.182.84.146;
+deny 64.190.76.10;
+deny 64.190.76.11;
+deny 64.190.76.12;
+deny 64.190.76.13;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
