--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -95,6 +95,10 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
+deny 2001:67c:e28:1::100;
+deny 2001:67c:e28:1::101;
+deny 2001:67c:e28:1::102;
+deny 2001:67c:e28:1::103;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
@@ -127,12 +131,12 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -402,7 +406,6 @@ deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
-deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
